test/tests/compiler/15_arrays_and_pointer_arithmetic/invalid_parse/malformed_array_declarator.plx
pub fn main(none) i32 {
    foo: [[10]]i32;
    return 0
}
